--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.3",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "jose": "^6.0.8",
     "lucide-react": "^0.378.0",
     "next": "^15.1.5",
     "next-sitemap": "^4.2.3",
